# yolov5

./: Yolo-v5运行Readme.md  detect.py  val.py
auto_label/: infer_img_roi.py  label_roi.py
build_engine/: CMakeLists.txt  README.md  build_engien.sh  demo.sh  gen_wts.py  yololayer.h  yolov5.cpp  yolov5.cpp.bak  yolov5_trt.py
configs/: dirs_structure.yaml
configs/container/container3/: coco128.yaml  hyp.scratch.yaml
configs/container/digit/: coco128.yaml  yolov5s.yaml
configs/container/letter/: coco128.yaml  yolov5s.yaml
configs/container/roi/: coco128.yaml  yolov5s.yaml
configs/container/type/: coco128.yaml  yolov5s.yaml
configs/control/: coco128.yaml  yolov5s.yaml
configs/danger/: coco128.yaml  hyp.scratch.yaml  yolov5s.yaml
configs/demo/: dataset.yaml  hyp.yaml
configs/direction/: coco128.yaml
configs/lorry_recog/adani/: coco128.yaml  hyp.scratch.yaml  yolov5s.yaml
configs/plate/Thailand/recog/: coco128.yaml  hyp.scratch.yaml  yolov5s.yaml
configs/plate/Thailand/roi/: coco128.yaml  hyp.scratch.yaml  yolov5s.yaml
configs/seal/: coco128.yaml  hyp.scratch.yaml  yolov5s.yaml
configs/weight_limit/: coco128.yaml  hyp.scratch.yaml  yolov5s.yaml
scripts/: aug.py  convert.py  datapre.py  datapre_container.py  datapre_labelbox.py  datapre_model2nd_plate.py  datapre_plate_taiguo.py  demo.py  expand_dataste.sh  gene_char_dataset.py  image_enhance.py  plate_chart.py  process_and_expand_dataset.py  process_and_expand_dataset1.py  process_and_gene_dataset.py  process_and_gene_dataset_bak.py  process_and_generate_roi_reog_dataset.py  processing_labeled_file.py
training/: training_demo.sh
training/detect/: detect_demo.sh
(+44 files in other folders)
